--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 29
@@ -21,19 +22,28 @@ android {
         }
     }
 }
-
+realm {
+    syncEnabled = true
+}
 dependencies {
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.android.support:appcompat-v7:29.0.0'
     implementation 'com.android.support:design:29.0.2'
     implementation 'com.android.support:cardview-v7:29.0.2'
-
-
+    implementation 'de.hdodenhof:circleimageview:+'
+    implementation 'com.github.smarteist:autoimageslider:1.3.9-appcompat'
+    implementation 'org.mongodb:stitch-android-sdk:4.5.0'
+//    implementation 'org.mongodb:mongo-java-driver:3.12.7'
 }
